force-app/main/default/objects/Asset_Reading__c/Asset_Reading__c.object-meta.xml
<CustomObject>
  <label>Asset Reading</label>
  <pluralLabel>Asset Readings</pluralLabel>
  <nameField>
    <label>Reading Name</label>
    <displayFormat>RDG-{0000}</displayFormat>
    <type>AutoNumber</type>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>