force-app/main/default/objects/Asset_Reading__c/fields/Asset__c.field-meta.xml
<CustomField>
  <fullName>Asset__c</fullName>
  <label>Asset</label>
  <referenceTo>Asset</referenceTo>
  <relationshipLabel>Readings</relationshipLabel>
  <relationshipName>Readings</relationshipName>
  <required>true</required>
  <type>Lookup</type>
  <deleteConstraint>Restrict</deleteConstraint>
</CustomField>