force-app/main/default/objects/Asset_Reading__c/fields/Attribute_Name__c.field-meta.xml
<CustomField>
  <fullName>Attribute_Name__c</fullName>
  <label>Attribute Name</label>
  <type>Picklist</type>
  <required>true</required>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Signal Strength</fullName><default>false</default><label>Signal Strength</label></value>
      <value><fullName>Battery Voltage</fullName><default>false</default><label>Battery Voltage</label></value>
      <value><fullName>GPS Accuracy</fullName><default>false</default><label>GPS Accuracy</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>