force-app/main/default/objects/Asset_Reading__c/fields/Reading_Timestamp__c.field-meta.xml
<CustomField>
  <fullName>Reading_Timestamp__c</fullName>
  <label>Reading Timestamp</label>
  <type>DateTime</type>
  <required>true</required>
</CustomField>