force-app/main/default/objects/Asset_Reading__c/fields/Value__c.field-meta.xml
<CustomField>
  <fullName>Value__c</fullName>
  <label>Value</label>
  <type>Number</type>
  <precision>10</precision>
  <scale>2</scale>
  <required>true</required>
</CustomField>